pkg/provider/kubernetes/ingress/fixtures/Ingress-with-a-bad-path-syntax_ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
      - path: /bar-"0"
        backend:
          serviceName: service1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
